# io

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AddonBuilder.io  BUGS  BUILD_AND_TEST.sh  CLAUDE.md  CMakeLists.txt  CNAME  CONTINUATIONS_TODO.md  CONTRIBUTING.md  DEVELOPERS.md  InstallEerie.cmake  MakeBinaryRelease.io  Makefile  Makefile.lib  Makefile.optimized  README  README.md  README.txt  TESTING_SUMMARY.md  _clang-format  _darcs_binaries  _index.json  build.io  build.sh  build_now.sh  build_optimized.sh  gitRemoveConflicts  gitShowConflicts  index.html  install_macos.sh  llms-full.txt  llms.txt  makePackage.io  quick_setup.sh  readme.txt  readme_addons.txt  (+6 more)
addons/: CMakeLists.txt  addons  generate.io
addons/AVCodec/: CMakeLists.txt  build.io  protos
addons/AVCodec/io/: AVCodec.io  Video.io
addons/AVCodec/samples/: test.mpg  test2.mpg  video.io  video2.io  video2.io2
addons/AVCodec/source/: IoAVCodec.c  IoAVCodec.h
addons/AppleExtras/: Makefile  build.io  depends  protos
addons/AppleExtras/samples/: pong.io  roller.io  test.io
addons/AppleExtras/source/: AppleLMU.c  AppleLMU.h  AppleSMC.c  AppleSMC.h  AppleSensors.c  AppleSensors.h  IoAppleSensors.c  IoAppleSensors.h  unimotion.c
addons/AppleSensors/: CMakeLists.txt  protos
addons/AppleSensors/samples/: pong.io  roller.io  test.io
addons/AppleSensors/source/: AppleLMU.c  AppleLMU.h  AppleSMC.c  AppleSMC.h  IoAppleSensors.c  IoAppleSensors.h  unimotion.h
addons/AsyncRequest/: CMakeLists.txt  build.io  protos
addons/AsyncRequest/io/: AsyncRequest.io
addons/AsyncRequest/source/: IoAsyncRequest.c  IoAsyncRequest.h
addons/Beanstalk/: depends  protos
addons/BigNum/: CMakeLists.txt  build.io  protos
addons/Bitly/: CMakeLists.txt  protos
addons/Blowfish/: CMakeLists.txt  protos
addons/Box/: CMakeLists.txt  build.io  frameworks  protos
addons/CFFI/: CMakeLists.txt  README  build.io  protos
addons/CGI/: CMakeLists.txt  protos
addons/Cairo/: CMakeLists.txt  build.io  depends  protos
addons/Clutter/: CMakeLists.txt  build.io  protos  resultfileName
addons/ContinuedFraction/: CMakeLists.txt  build.io  protos
addons/Contracts/: build.io
addons/Curses/: CMakeLists.txt  build.io  protos
addons/DBI/: CMakeLists.txt  build.io  protos
addons/DistributedObjects/: CMakeLists.txt  protos
addons/EditLine/: CMakeLists.txt  build.io  protos
addons/Facebook/: CMakeLists.txt  protos
addons/Flux/: CMakeLists.txt  protos
addons/Fnmatch/: CMakeLists.txt  build.io
addons/Font/: CMakeLists.txt  build.io  protos
addons/GLFW/: CMakeLists.txt  build.io  depends
addons/GoogleSearch/: CMakeLists.txt  build.io  depends  protos
addons/HttpClient/: CMakeLists.txt  README  TODO  protos
addons/Image/: CMakeLists.txt  build.io  protos
addons/LZO/: CMakeLists.txt  build.io  protos
addons/LibSndFile/: CMakeLists.txt  build.io  protos
addons/Libxml2/: CMakeLists.txt  build.io  protos
addons/Logging/: CMakeLists.txt  protos
addons/Loki/: CMakeLists.txt  protos
addons/Loudmouth/: CMakeLists.txt  build.io  depends  protos
addons/MD5/: CMakeLists.txt  protos
addons/Memcached/: CMakeLists.txt  build.io  protos
addons/MySQL/: CMakeLists.txt  build.io  protos
addons/NetworkAdapter/: build.io
addons/NotificationCenter/: CMakeLists.txt  protos
addons/NullAddon/: CMakeLists.txt
addons/ODE/: CMakeLists.txt  build.io  depends  protos
addons/Oauth/: CMakeLists.txt  protos
addons/ObjcBridge/: CMakeLists.txt  build.io  depends
addons/Obsidian/: CMakeLists.txt  build.io  depends  protos
addons/Ogg/: CMakeLists.txt  build.io  protos
addons/OpenGL/: CMakeLists.txt  build.io  depends  protos
addons/PortAudio/: CMakeLists.txt  build.io  protos
addons/PostgreSQL/: CMakeLists.txt  build.io  protos
addons/Postgres/: build.io
addons/Python/: CMakeLists.txt  build.io  protos
addons/QDBM/: CMakeLists.txt  build.io  protos
addons/Random/: CMakeLists.txt  build.io  protos
addons/Range/: CMakeLists.txt  protos
addons/Rational/: CMakeLists.txt  protos
addons/ReadLine/: CMakeLists.txt  build.io  protos
addons/Regex/: CMakeLists.txt  build.io  depends  protos
addons/SGML/: CMakeLists.txt  build.io
addons/SHA1/: CMakeLists.txt  build.io  protos
addons/SQLite/: build.io
addons/SQLite3/: CMakeLists.txt  build.io  protos
addons/SampleRateConverter/: CMakeLists.txt  build.io  protos
addons/SecureSocket/: CMakeLists.txt  build.io  depends  protos  readme.txt
addons/SkipDB/: build.io  protos
addons/Socket/: CMakeLists.txt  build.io  protos
addons/SoundTouch/: build.io
addons/SqlDatabase/: CMakeLists.txt  protos
addons/Syslog/: CMakeLists.txt  build.io  protos
addons/SystemCall/: CMakeLists.txt  protos
addons/TagDB/: build.io
addons/TagLib/: CMakeLists.txt  build.io  protos
addons/Theora/: CMakeLists.txt  build.io  protos
addons/Thread/: CMakeLists.txt  Makefile  build.io  protos
addons/TokyoCabinet/: CMakeLists.txt  build.io  test.db
addons/Twitter/: CMakeLists.txt  build.io  protos
addons/UUID/: CMakeLists.txt  build.io
addons/User/: CMakeLists.txt  build.io  protos
addons/VertexDB/: CMakeLists.txt  depends  protos
addons/Volcano/: CMakeLists.txt  README  protos
addons/Vorbis/: CMakeLists.txt  build.io  depends  protos
addons/Web/: CMakeLists.txt  build.io  protos
addons/Yajil/: test.io
addons/Yajl/: CMakeLists.txt  build.io  protos  test.io
addons/Zlib/: CMakeLists.txt  build.io  protos
libs/: CMakeLists.txt
libs/MD5/: CMakeLists.txt
libs/basekit/: CMakeLists.txt  Makefile  Makefile.lib
libs/coroutine/: .gitignore  CMakeLists.txt  Makefile
libs/garbagecollector/: CMakeLists.txt  Makefile  Makefile.lib
libs/iovm/: CMakeLists.txt  IoInstallPrefix.h.in  LICENSE.txt  Makefile  Makefile.local  depends
tools/: CMakeLists.txt  Makefile  gendocs.sh
tools/docker/: Dockerfile  README.md  buildDockerIo.sh  runDockerIo.sh
tools/editlib_test/: Makefile  editlib_test  editlib_test.c
tools/io/: DocsExtractor.io  docs2html.io
tools/old/: processIoCode.io  processIoCodeFor.io
tools/source/: main.c
(+3790 files in other folders)
